--- a/styles/pages.css
+++ b/styles/pages.css
@@ -157,6 +157,32 @@
     color:white;
 }
 
+.page7{
+    background-color: rgb(255, 0, 0);
+    position:absolute;
+    top: 230px;
+    left: 395px;
+    bottom: 640px;
+    
+   
+    height: 20px;
+    width: 20px;
+
+    font-family: 'Raleway', sans-serif;
+    color: white;
+    font-size: 20px;
+
+    border-radius: 50px;
+    
+}
+
+.page7:hover{
+    background-color: rgb(255, 255, 255);
+    border-style: solid;
+    border-color: rgb(38, 0, 255);
+    border-width: 5px;
+    color:white;
+}
 
 
 .tooltip {
